--- a/config/database.yml
+++ b/config/database.yml
@@ -29,11 +29,11 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: postgres
+  username: <%= Rails.application.credentials.developement[:postgres_username] %>
 
   # The password associated with the postgres role (username).
-  password: postgres
-
+  password: <%= Rails.application.credentials.developement[:postgres_password] %>
+  
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
@@ -59,8 +59,9 @@ test:
   <<: *default
   database: blog_rails_psql_test
 
-  username: postgres
-  password: postgres
+  username: <%= Rails.application.credentials.test[:postgres_username] %>
+  password: <%= Rails.application.credentials.test[:postgres_password] %>
+ 
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
