--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "puma": "^4.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.41.0"
   },
